--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <p.>
         Hola, estoy haciendo un sitio web por
         primera vez. Quiero aprender bien de
-        todo este mundo, al menos ya estoy logrando
-        Vamos a ver no me quiere actualizar ni abrir
-        Voy a ver cuanto saco en el examen a ver si lo paso a la primera
+        todo este mundo.
     </p.>
 </body>
 </html>
